--- a/checkout.html
+++ b/checkout.html
@@ -109,6 +109,6 @@
         </div>
       </div>
     </main>
-    <script src="checkout.js"></script>
+    <script src="./checkout.js"></script>
   </body>
 </html>
